--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-   
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
@@ -11,16 +10,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-   
+    "aframe": "^1.5.0",
+    "aframe-react": "^4.4.0",
     "firebase": "^10.10.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
-   
+    "react-babylonjs": "^3.1.30",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1"
- 
   },
   "scripts": {
     "start": "react-scripts start",
