--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aframe": "^1.5.0",
+    "aframe": "^1.6.0",
+    "aframe-extras": "^7.5.4",
+    "aframe-physics-system": "^4.0.2",
     "aframe-react": "^4.4.0",
-    "firebase": "^10.10.0",
+    "firebase": "^10.14.1",
     "path-browserify": "^1.0.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-babylonjs": "^3.1.30",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "simple-peer": "^9.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
