--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
+    "react-joystick-component": "^6.2.1",
     "react-scripts": "5.0.1",
-    "simple-peer": "^9.11.1"
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
