--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-joystick-component": "^6.2.1",
     "react-scripts": "5.0.1",
     "simple-peer": "^9.11.1",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
   "scripts": {
